# stm32-driver-development

./: .gitignore  CMakeLists.txt  README.md  gcc-arm-none-eabi.cmake
Core/: CMakeLists.txt
Core/Include/core/: stm32f446xx.h
Core/Src/: stm32f446xx.cpp
Drivers/: CMakeLists.txt
Drivers/Include/drivers/: stm32f446xx_gpio.h  stm32f446xx_spi.h
Drivers/Src/: stm32f446xx_gpio.cpp  stm32f446xx_spi.cpp
Project/Src/: main.cpp
Project/Startup/: startup_stm32f446retx.s
